--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </div>
     </div>
 
+    <div class="result"></div>
+
     <div class="container">
         <div class="square" id="box1"></div>
         <div class="square" id="box2"></div>
@@ -142,7 +144,7 @@
             width: 185px;
             height: 185px;
             border: 1px solid lemonchiffon;
-            font-size: 120px;
+            font-size: 130px;
             color: #c51f1f;
             text-align: center;
             cursor: pointer;
@@ -196,7 +198,7 @@
         #reset {
             display: flex;
             margin: auto;
-            margin-top: 70px;
+            margin-top: 58px;
             border-radius: 8px;
             border: none;
             background: darkgray;
@@ -210,7 +212,15 @@
             justify-content: center;
         }
 
+        footer {
+            color: #c51f1f;
+        }
+
     </style>
+
+    <footer>
+        <p>Por Larissa de Oliveira Mesquiita <a href="https://github.com/larissaolidev">(github.com/larissaolidev)</a></p>
+    </footer>
 
 </body>
 
